mobile profile card alignment fixed

--- a/src/components/card/mobile-profile-card/MobileProfileCard.scss
+++ b/src/components/card/mobile-profile-card/MobileProfileCard.scss
@@ -46,8 +46,8 @@
   background-color: #f2f7f6;
   border-radius: 1rem;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
-  height: 9.3rem;
-  min-height: 9.3rem;
+  height: 10.5rem;
+  min-height: 10.5rem;
   transition: height 0.5s cubic-bezier(0.165, 0.84, 0.44, 1),
     max-height 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
   max-height: auto;
@@ -274,6 +274,9 @@
 /*  (min-width: 768px) and above */
 @media (min-width: 768px) {
   .mobile-profile-card {
+    height: 9.6rem;
+    min-height: 9.6rem;
+
     .top {
       display: flex;
       justify-content: space-between;
